Update portfolio, contact routes

--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -14,7 +14,7 @@ html(lang='en')
           a(href='#education') Education
           a(href='#skills') Skills
           a(href='#goals') Goals
-          a(href='/contactme') Contact Me
+          a(href='#contactme') Contact Me
 
       // Home Section
       section#home.home
@@ -22,10 +22,12 @@ html(lang='en')
           img(src='/images/dada.jpg', alt='Hilda Wadada')
         .home-content
           h1 Hi, I'm Wadada Hilda
-          h3 Fullstack Developer
+          h3 AI Engineer & Web-developer
           p
-            | I am specializing in both frontend and backend development, crafting responsive websites and robust server-side solutions. 
-            | Passionate about clean code, intuitive design, and turning complex problems into elegant solutions.
+            |I am specializing in both frontend and backend development, crafting responsive websites and robust server-side solutions. 
+            |Passionate about clean code, intuitive design, and turning complex problems into elegant solutions. 
+            |I am also exploring the field of Artificial Intelligence, learning to integrate AI-powered features into applications to make them smarter and more intuitive.
+
 
       // Education Section
       section#education.education
