--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -67,8 +67,8 @@ html(lang='en')
             h2 Figma
             p Proficient in designing modern and responsive UI/UX prototypes using Figma.
           .card
-            h2 Agile
-            p Experienced with Agile methodologies for flexible and iterative project delivery.
+            h2 Python
+            p Experienced in writing clean Python code, building scripts, and working with APIs.
           .card
             h2 Scrum
             p Knowledgeable in Scrum practices, sprint planning, and collaborative teamwork.
